fix: make .sub-nav--teacher, .sub-nav--student visible on small screens

--- a/portal/static/portal/sass/partials/_subnavs.scss
+++ b/portal/static/portal/sass/partials/_subnavs.scss
@@ -116,11 +116,3 @@
     display: none;
   }
 }
-
-@media (max-width: $mobile-max-width) {
-
-  .sub-nav--teacher,
-  .sub-nav--student {
-    display: none;
-  }
-}
